Update crew application (school admin)

--- a/TvpssApp/src/main/webapp/resources/css/crewApplication.css
+++ b/TvpssApp/src/main/webapp/resources/css/crewApplication.css
@@ -70,6 +70,7 @@ h2 {
     font-size: 24px;
     font-weight: 500;
 }
+
 .content {
     flex-grow: 1;
     padding: 40px;
@@ -134,6 +135,10 @@ th, td {
 
 th {
     cursor: pointer;
+}
+
+tr {
+    line-height: 1.5;
 }
 
 tr:hover {
